--- a/app/views/settings/preferences/other/show.html.haml
+++ b/app/views/settings/preferences/other/show.html.haml
@@ -12,6 +12,7 @@
 
   .fields-group
     = f.input :setting_aggregate_reblogs, as: :boolean, wrapper: :with_label, recommended: true
+    = f.input :setting_home_dms, as: :boolean, wrapper: :with_label
 
   %h4= t 'preferences.posting_defaults'
 
