--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -12,6 +12,6 @@
   %body.error
     .dialog
       .dialog__illustration
-        %img{ alt: Setting.default_settings['site_title'], src: '/oops.png' }/
+        %img{ alt: Setting.default_settings['site_title'], src: '/corgi_error_final.png' }/
       .dialog__message
         %h1= yield :content
